objects/xyz__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>xyz</label>
    <fields>
        <fullName>name__c</fullName>
        <label>name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>phone__c</fullName>
        <label>phone</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>country__c</fullName>
        <label>country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>